--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "blacksheep>=2.0.0",
   "uvicorn>=0.30.0",
   "pydantic>=2.7.0",
+  "httpx>=0.27.0",
   "tree-sitter==0.20.4",
   "tree-sitter-languages==1.10.2",
 ]
