--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# File: .gitignore
+# Purpose: Ignore editor, build, and dev-local state artifacts.
+# Product/business importance: Prevents accidental commits of secrets, large build outputs, and machine-specific state.
+#
+# Copyright (c) 2026 John K Johansen
+# License: MIT (see LICENSE)
+
 # OS / editor
 .DS_Store
 .idea/
@@ -37,3 +44,7 @@ build/
 
 # CodeKnowl dev-local state
 .codeknowl/
+
+# CodeKnowl smoke/CI scratch state
+.codeknowl-smoke/
+.codeknowl-*/
