--- a/vscode-extension/.eslintignore
+++ b/vscode-extension/.eslintignore
@@ -1,3 +1,10 @@
+# File: vscode-extension/.eslintignore
+# Purpose: Define files and directories excluded from ESLint scanning for the extension.
+# Product/business importance: Keeps linting focused on source while avoiding generated artifacts in CI.
+#
+# Copyright (c) 2026 John K Johansen
+# License: MIT (see LICENSE)
+
 dist/
 node_modules/
 .vscode-test/
